[gd_scene load_steps=43 format=3 uid="uid://dnsiqtfp8h7tn"]

[ext_resource type="Script" path="res://scripts/enemies/Slime.gd" id="1_q6b3l"]
[ext_resource type="PackedScene" uid="uid://bydkv51tvun14" path="res://scenes/components/health_bar.tscn" id="2_h7txc"]
[ext_resource type="Texture2D" uid="uid://pc0u3r2ya8ht" path="res://assets/sprites/enemies/Slime_Green.png" id="2_hl25o"]
[ext_resource type="PackedScene" uid="uid://b2xlkhfkawhk0" path="res://scenes/components/health_component.tscn" id="4_6rkua"]
[ext_resource type="PackedScene" uid="uid://dfjyxuc6ehapy" path="res://scenes/components/knockback_component.tscn" id="5_2jx7m"]
[ext_resource type="PackedScene" uid="uid://cmv6vqiqlvgxb" path="res://scenes/components/move_component.tscn" id="6_4uyvh"]
[ext_resource type="Script" path="res://scripts/components/slime_move_component.gd" id="7_0auv4"]
[ext_resource type="PackedScene" uid="uid://dfbo0t2yxjdnw" path="res://scenes/state_machine/states/hurt.tscn" id="7_7w2q6"]
[ext_resource type="PackedScene" uid="uid://db8ae5pg4odve" path="res://scenes/state_machine/state_machine.tscn" id="8_eygxv"]
[ext_resource type="PackedScene" path="res://scenes/state_machine/states/idle.tscn" id="9_6x3ua"]
[ext_resource type="PackedScene" path="res://scenes/state_machine/states/move.tscn" id="10_ruwfa"]
[ext_resource type="PackedScene" uid="uid://c3guamcp6bbq4" path="res://scenes/state_machine/states/die.tscn" id="10_wrxba"]
[ext_resource type="PackedScene" path="res://scenes/state_machine/states/attack.tscn" id="11_7e13l"]
[ext_resource type="PackedScene" uid="uid://c4x0ivbdhjm46" path="res://scenes/handlers/animation_handler.tscn" id="12_fbb6w"]
[ext_resource type="PackedScene" uid="uid://c6rs56mdroh1e" path="res://scenes/components/attack_component.tscn" id="14_bsvb2"]
[ext_resource type="Script" path="res://scripts/components/attack_component.gd" id="15_t4auq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mq0qr"]
atlas = ExtResource("2_hl25o")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybukm"]
atlas = ExtResource("2_hl25o")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cn0kc"]
atlas = ExtResource("2_hl25o")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1nhd"]
atlas = ExtResource("2_hl25o")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aorp0"]
atlas = ExtResource("2_hl25o")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jcsyq"]
atlas = ExtResource("2_hl25o")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbg82"]
atlas = ExtResource("2_hl25o")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq7m1"]
atlas = ExtResource("2_hl25o")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_33ot2"]
atlas = ExtResource("2_hl25o")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_usbx8"]
atlas = ExtResource("2_hl25o")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_stcnx"]
atlas = ExtResource("2_hl25o")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gy1m"]
atlas = ExtResource("2_hl25o")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fc7d"]
atlas = ExtResource("2_hl25o")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f41h"]
atlas = ExtResource("2_hl25o")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4b2u"]
atlas = ExtResource("2_hl25o")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ly3xn"]
atlas = ExtResource("2_hl25o")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7h14f"]
atlas = ExtResource("2_hl25o")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuerj"]
atlas = ExtResource("2_hl25o")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvguy"]
atlas = ExtResource("2_hl25o")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lsyjg"]
atlas = ExtResource("2_hl25o")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4jnp"]
atlas = ExtResource("2_hl25o")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aexqu"]
atlas = ExtResource("2_hl25o")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3b5u"]
atlas = ExtResource("2_hl25o")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2npp"]
atlas = ExtResource("2_hl25o")
region = Rect2(448, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_805o6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mq0qr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybukm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cn0kc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1nhd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aorp0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jcsyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbg82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq7m1")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_33ot2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usbx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stcnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usbx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gy1m")
}],
"loop": false,
"name": &"hurt",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fc7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f41h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4b2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ly3xn")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7h14f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuerj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvguy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsyjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4jnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aexqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3b5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2npp")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_sklxn"]
radius = 9.0

[node name="Slime" type="CharacterBody2D" node_paths=PackedStringArray("animations", "hitbox", "attack_hitbox", "state_machine", "move_component", "health_component", "attack_component") groups=["enemy"]]
z_index = 15
collision_layer = 2
collision_mask = 5
platform_floor_layers = 0
script = ExtResource("1_q6b3l")
animations = NodePath("SlimeAnimation")
hitbox = NodePath("CollisionShape2D")
attack_hitbox = NodePath("AttackHitbox")
state_machine = NodePath("StateMachine")
move_component = NodePath("Components/MoveComponent")
health_component = NodePath("Components/HealthComponent")
attack_component = NodePath("Components/AttackComponent")

[node name="SlimeAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_805o6")
animation = &"hurt"
autoplay = "idle"
frame = 3
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_sklxn")

[node name="AttackHitbox" type="Area2D" parent="."]

[node name="StateMachine" parent="." node_paths=PackedStringArray("starting_state") instance=ExtResource("8_eygxv")]
starting_state = NodePath("idle")

[node name="idle" parent="StateMachine" node_paths=PackedStringArray("move_state", "attack_state", "hurt_state", "die_state") instance=ExtResource("9_6x3ua")]
move_state = NodePath("../move")
attack_state = NodePath("../attack")
hurt_state = NodePath("../hurt")
die_state = NodePath("../die")

[node name="move" parent="StateMachine" node_paths=PackedStringArray("idle_state", "attack_state", "hurt_state", "die_state") instance=ExtResource("10_ruwfa")]
idle_state = NodePath("../idle")
attack_state = NodePath("../attack")
hurt_state = NodePath("../hurt")
die_state = NodePath("../die")

[node name="attack" parent="StateMachine" node_paths=PackedStringArray("idle_state", "move_state", "die_state") instance=ExtResource("11_7e13l")]
idle_state = NodePath("../idle")
move_state = NodePath("../move")
die_state = NodePath("../die")

[node name="hurt" parent="StateMachine" node_paths=PackedStringArray("idle_state", "move_state", "die_state") instance=ExtResource("7_7w2q6")]
idle_state = NodePath("../idle")
move_state = NodePath("../move")
die_state = NodePath("../die")

[node name="die" parent="StateMachine" instance=ExtResource("10_wrxba")]

[node name="HealthBar" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("2_h7txc")]
offset_top = 12.0
offset_bottom = 16.0
health_component = NodePath("../Components/HealthComponent")

[node name="AnimationHandler" parent="." node_paths=PackedStringArray("animations") instance=ExtResource("12_fbb6w")]
animations = NodePath("../SlimeAnimation")
starting_animation = "idle"

[node name="Components" type="Node" parent="."]

[node name="KnockbackComponent" parent="Components" node_paths=PackedStringArray("owner_node") instance=ExtResource("5_2jx7m")]
owner_node = NodePath("../..")

[node name="HealthComponent" parent="Components" instance=ExtResource("4_6rkua")]

[node name="MoveComponent" parent="Components" node_paths=PackedStringArray("parent") instance=ExtResource("6_4uyvh")]
script = ExtResource("7_0auv4")
parent = NodePath("../..")
patrol_radius = 50.0
direction_change_interval = 2.0
speed = 10.0

[node name="AttackComponent" parent="Components" node_paths=PackedStringArray("attack_hitbox") instance=ExtResource("14_bsvb2")]
script = ExtResource("15_t4auq")
attack_hitbox = NodePath("../../AttackHitbox")

[connection signal="state_changed" from="StateMachine" to="." method="_on_state_machine_state_changed"]
[connection signal="direction_changed" from="StateMachine/move" to="." method="_on_move_direction_changed"]
